--- a/Website/circuit.html
+++ b/Website/circuit.html
@@ -15,7 +15,7 @@
 <body>
     <header class="mt-2">
         <nav>
-            <h1 class="cent pb-2">Matthew Hopson</h1>
+            <h1 class="cent pb-2">Paul Moore<h1>
             <div class="d-flex justify-content-center pb-2"><a class="align-middle pl-4" href="about.html">About</a><a class="align-middle pl-4" href="index.html">Projects</a><a class="align-middle pl-4" href="links.html">Sites </a><a class="align-middle pl-4" href="fun.html">Fun</a></div>
         </nav>
     </header>
@@ -27,36 +27,22 @@
 <script src="assets/js/Circuit/Tools.js"></script>
 <script src="assets/js/Circuit/App.js"></script>
 <main>
-    <h2 class="cent">Circuit Editor </h2>
-    <p>Simple circuit editor designed to create mini diagrams for the Node MCU microcontroller cause I was unfond of exsiting solutions </p>
+    
 </main>
-<div class="fun-content">
-    <form>
-        <div class="row">
-            <label for="colour">Colour</label>
-            <input class="m-1" type="color" id="colour" name="colour" value="#FF00FF" />
-            <button class="btn btn-info m-1" type="button" id="resistor">Resistor</button>
-            <button class="btn btn-info m-1" type="button" id="wire">Wire</button>
-            <button class="btn btn-info m-1" type="button" id="erase">Erase</button>
-            <button class="btn btn-info m-1" type="button" id="led">LED</button>
-            <button class="btn btn-info m-1" type="button" id="button">Button</button>
-        </div>
-    </form>
-    <canvas id="circuitcanvas"></canvas>
-</div>
+
+
 <footer>
     <div class="d-flex justify-content-center pt-3">
         <p>Find me elsewhere...</p>
     </div>
     <div class="d-flex justify-content-center">
-        <a href="https://github.com/Hopson97" target="_blank">
+        <a href="https://github.com/paulmooredev" target="_blank">
             <div class="fab fa-github fa-2x"></div>
-        </a><a href="https://www.youtube.com/c/hopsonn" target="_blank">
+        </a><a href="https://www.youtube.com/c/paulmmoore3416" target="_blank">
             <div class="fab fa-youtube fa-2x"> </div>
-        </a><a href="https://twitter.com/hopson1997" target="_blank">
-            <div class="fab fa-twitter fa-2x"> </div>
-        </a><a href="https://www.patreon.com/Hopson" target="_blank">
-            <div class="fab fa-patreon fa-2x"> </div>
+        </a><a href="https://linkedin.com/in/paulmoore3416" target="_blank">
+            <div class="fab fa-linkedin fa-2x"> </div>
+        
         </a>
     </div>
 </footer>
