--- a/Website/about.html
+++ b/Website/about.html
@@ -15,7 +15,7 @@
 <body>
     <header class="mt-2">
         <nav>
-            <h1 class="cent pb-2">Matthew Hopson</h1>
+            <h1 class="cent pb-2">Paul Moore</h1>
             <div class="d-flex justify-content-center pb-2"><a class="align-middle pl-4" href="about.html">About</a><a class="align-middle pl-4" href="index.html">Projects</a><a class="align-middle pl-4" href="links.html">Sites </a><a class="align-middle pl-4" href="fun.html">Fun</a></div>
         </nav>
     </header>
@@ -24,11 +24,9 @@
     <h2 class="cent">About Me </h2>
     <div class="row">
         <div class="col-12">
-            <p>Welcome! My name is Matthew Hopson and I current am a final year software engineering project, studying at the University of Portsmouth. I have a huge passion for anything technology, especially software development and learning about new languages and domains.</p>
-            <p>I started to learn programming around 2015, when I picked up a copy of <a href="https://www.cprogramming.com/c++book/" target="_blank">Jumping into C++ by </a>Alex Allain, and since then nd have created many projects in many different languages since, most of which can be found on the <a href="index.html">Projects page</a> of this website.</p>
-            <p>Around the same time as this, I also opend up a <a href="https://youtube.com/c/hopsonn" target="_blank">YouTube channel</a> to share my projects and demonstrate their creation process. As of writing, the channel has accumauted over 85,000 subscribers and over 9,750,000 views.</p>
-            <p>My main programmimg interests are graphical applications and general low level programming and optimizations.</p>
-            <p>Outside of programming and the computer, I enjoy cooking, playing the piano, and playing games.</p>
+            <p>Welcome! My name is Paul Moore and I am currently in training Centriq Training. I have a huge passion for 
+               anything technology, especially software development and learning about new languages and domains.</p>
+            
             <!-- .col-6-->
             <!--   img(src="assets/img/logos/logo.png")-->
         </div>
@@ -39,14 +37,12 @@
         <p>Find me elsewhere...</p>
     </div>
     <div class="d-flex justify-content-center">
-        <a href="https://github.com/Hopson97" target="_blank">
+        <a href="https://github.com/paulmooredev" target="_blank">
             <div class="fab fa-github fa-2x"></div>
-        </a><a href="https://www.youtube.com/c/hopsonn" target="_blank">
+        </a><a href="https://www.youtube.com/c/paulmmoore3416" target="_blank">
             <div class="fab fa-youtube fa-2x"> </div>
-        </a><a href="https://twitter.com/hopson1997" target="_blank">
+        </a><a href="https://twitter.com/paulmooredev" target="_blank">
             <div class="fab fa-twitter fa-2x"> </div>
-        </a><a href="https://www.patreon.com/Hopson" target="_blank">
-            <div class="fab fa-patreon fa-2x"> </div>
         </a>
     </div>
 </footer>
