--- a/Website/links.html
+++ b/Website/links.html
@@ -15,49 +15,26 @@
 <body>
     <header class="mt-2">
         <nav>
-            <h1 class="cent pb-2">Matthew Hopson</h1>
+            <h1 class="cent pb-2">Paul Moore</h1>
             <div class="d-flex justify-content-center pb-2"><a class="align-middle pl-4" href="about.html">About</a><a class="align-middle pl-4" href="index.html">Projects</a><a class="align-middle pl-4" href="links.html">Sites </a><a class="align-middle pl-4" href="fun.html">Fun</a></div>
         </nav>
     </header>
 </body>
 <main>
-    <h2 class="cent">Sites </h2>
-    <p>This is just a bunch of sites I go to often and is the page that opens when I open a new tab, all put into one place with custom-made logs for some fun. </p>
-    <div class="common_link_section">
-        <h2>Common </h2>
-        <div class="row">
-            <div class="common_link"> <a href="https://www.youtube.com/"><img src="assets/img/logos/logo-yt.png" /></a></div>
-            <div class="common_link"> <a href="https://www.github.com/"><img src="assets/img/logos/logo-gh.png" /></a></div>
-            <div class="common_link"> <a href="https://www.netflix.com/"><img src="assets/img/logos/logo-nf.png" /></a></div>
-        </div>
-    </div>
-    <div class="common_link_section">
-        <h2>Common </h2>
-        <div class="row">
-            <div class="common_link"> <a href="https://mail.google.com/mail/u/3/#inbox"><img src="assets/img/logos/logo-gm.png" /></a></div>
-            <div class="common_link"> <a href="https://outlook.live.com/mail/inbox"><img src="assets/img/logos/logo-ol.png" /></a></div>
-        </div>
-    </div>
-    <div class="common_link_section">
-        <h2>Common </h2>
-        <div class="row">
-            <div class="common_link"> <a href="https://smile.amazon.co.uk"><img src="assets/img/logos/logo-am.png" /></a></div>
-        </div>
-    </div>
+    
 </main>
 <footer>
     <div class="d-flex justify-content-center pt-3">
         <p>Find me elsewhere...</p>
     </div>
     <div class="d-flex justify-content-center">
-        <a href="https://github.com/Hopson97" target="_blank">
+        <a href="https://github.com/paulmooredev" target="_blank">
             <div class="fab fa-github fa-2x"></div>
-        </a><a href="https://www.youtube.com/c/hopsonn" target="_blank">
+        </a><a href="https://www.youtube.com/c/paulmoore3416" target="_blank">
             <div class="fab fa-youtube fa-2x"> </div>
-        </a><a href="https://twitter.com/hopson1997" target="_blank">
-            <div class="fab fa-twitter fa-2x"> </div>
-        </a><a href="https://www.patreon.com/Hopson" target="_blank">
-            <div class="fab fa-patreon fa-2x"> </div>
+        </a><a href="https://linkedin.com/in/paulmoore3416" target="_blank">
+            <div class="fab fa-Linkedin fa-2x"> </div>
+        </a>
         </a>
     </div>
 </footer>
